@@ -1,3 +1,8 @@
+2016-07-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/stm8/memcpy.s:
+	  Partially unroll stm8 memcpy() for speed.
+
 2016-07-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/main.c,
